--- a/styles/body-style.css
+++ b/styles/body-style.css
@@ -3,11 +3,11 @@ html, body
     margin: 0;
     height: 100%;
 }
+/*
 .items-area
 {
     margin: -20px 0 -200px 0;
     min-height: 100%;
-    border: solid black 2px;
     padding: 10px;
     border-collapse: collapse;
 
@@ -18,22 +18,18 @@ html, body
     display: block;
     content: "";
 }
+
 .body-footer, .items-area:after
 {
+    position: absolute;
     height: 200px;
 }
+*/
 .image-box img
 {
     width: 70%;
     height:10%;
     position: relative;
-}
-.items-display
-{
-    height: 95%;
-    width: 95%;align-self: center;
-    position: absolute;
-    left: 2.5%;
 }
 .items-display table
 {
