--- a/styles/master-style.css
+++ b/styles/master-style.css
@@ -24,6 +24,5 @@
 {
     background: #f5f5f5;
     border-top: solid 1px #ddd;
-    vertical-align: bottom;
-    display: table-row;
+    bottom: 0;
 }
