--- a/styles/added-styles.css
+++ b/styles/added-styles.css
@@ -266,6 +266,7 @@ index items display
 }
 .product-box img{
     overflow:hidden;
+    max-height: 260px;
 }
 .product-box a.title{
     text-transform:uppercase;
@@ -401,4 +402,9 @@ h4.title .button:hover{
         width: 100%;
         text-align: center;
     }
+}
+#display-area #myCarousel img
+{
+    max-height: 400px;
+
 }
